Fix gap in SideBar.

--- a/examples/practice-typescript/src/components/Logo/logo.scss
+++ b/examples/practice-typescript/src/components/Logo/logo.scss
@@ -1,5 +1,5 @@
 .title {
-  color: white;
+  fill: white;
   font-size: 16px;
   font-family: Roboto;
   font-weight: 700;
