--- a/examples/practice-typescript/src/components/SideBar/sideBar.scss
+++ b/examples/practice-typescript/src/components/SideBar/sideBar.scss
@@ -1,9 +1,12 @@
 .aside {
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   background-color: #220646;
   flex-direction: column;
-  justify-content: space-between;
   max-width: 250px;
   height: 100vh;
   padding: 35px 0 0 35px;
+  gap: 57px;
+  color: white;
 }
